🎨 GET books API 리스폰스의 태그 정보에 name이 포함되도록 수정